# mapgen

./: .clang-format  .gitignore  CMakeLists.txt
Clipper/: clipper_c.cpp  clipper_c.h  clipper_c_test.c
dep/Clipper/: CMakeLists.txt  clipper.cpp  clipper_c.cpp  clipper_c.h  clipper_c_test.c  clipper_test.cpp  readme.txt
dep/VisiLibity1/src/: main
dep/delaunay/: CMakeLists.txt
src/: Vec.h  delaunay.c  engine.c  engine.h  globals.h  kvec.h  level.c  level.h  mapgen.c  mgLevel.c  mgLevel.h  mgRoom.c  mgRoom.h  primitives.h  room.c  room.h  tunnel.c  tunnel.h  utils.c  utils.h  world.c  world.h  worley.c
src/clipper/: clipper.h  clipper_c.cpp  clipper_c.h  clipper_triangulation.cpp
src/visilibity/: mgVisilibity.cpp  mgVisilibity.h
